Fixed content below navbar not showing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,6 +68,7 @@ body {
   background: #f2f2f2;
   color: #333;
   font-family: "Nunito";
+  padding-top: 80px;
 }
 
 a {
